Fix: ,menambahkan proses filter data
